Add plugin to disable force dark mode on Android as outlined in https://stackoverflow.com/a/74239739

--- a/app.json
+++ b/app.json
@@ -22,7 +22,13 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "plugins": [
+        [
+          "./plugins/withDisableForcedDarkModeAndroid.js",
+          {}
+        ]
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
