--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "^2.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
